objects/Support_Request__c.object
<CustomObject>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <label>Assigned To</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dianna Llarena</fullName>
                </value>
                <value>
                    <fullName>Elissa Ilario</fullName>
                </value>
                <value>
                    <fullName>Kenon Richardson</fullName>
                </value>
                <value>
                    <fullName>Vince Walton</fullName>
                </value>
                <value>
                    <fullName>Carrie Hossan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_Toa__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>End_User_Support_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assignee_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Assignee Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Business_Analyst_Comments__c</fullName>
        <description>Comment section for BA&apos;s to add to SR while it is being worked.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Comment section for BA&apos;s to add to SR while it is being worked.</inlineHelpText>
        <label>Support EUSR Consultant Comments</label>
        <length>130000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CA_Priority__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CA Leadership Team identified priority</description>
        <label>CA Priority</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Communication_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Communication Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Communication__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Communication</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Created_On_Behalf_Of__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Created On Behalf Of</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Support_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>100000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>JIRA_Ticket_Status__c</fullName>
        <label>JIRA Ticket Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JIRA_Ticket_Team_Assigned__c</fullName>
        <label>JIRA Ticket Team Assigned</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Program Management</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Bus Ops</fullName>
                </value>
                <value>
                    <fullName>Data Analytics</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Jira_Closed_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Jira Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Jira_Ticket__c</fullName>
        <description>Place for Jira Ticket number.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Please enter Jira ticket number if applicable.</inlineHelpText>
        <label>Jira Ticket</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority_Rating__c</fullName>
        <description>Priority Enhancement Rating</description>
        <inlineHelpText>Priority Enhancement Rating</inlineHelpText>
        <label>Priority Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 Top</fullName>
                </value>
                <value>
                    <fullName>2 Mid-level</fullName>
                </value>
                <value>
                    <fullName>3 Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Referred_To_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referred To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>End_User_Support_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referred_To__c</fullName>
        <label>Referred To</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bill Renkel</fullName>
                </value>
                <value>
                    <fullName>Bus Ops</fullName>
                </value>
                <value>
                    <fullName>Carrie Hossann</fullName>
                    <label>Carrie Hossann (Inactive)</label>
                </value>
                <value>
                    <fullName>Cathy Godfrey</fullName>
                </value>
                <value>
                    <fullName>Chanmin Hoo</fullName>
                </value>
                <value>
                    <fullName>Christopher Cosgrove</fullName>
                </value>
                <value>
                    <fullName>Data Analytics</fullName>
                </value>
                <value>
                    <fullName>Elissa Ilario</fullName>
                </value>
                <value>
                    <fullName>Hoa Nguyen</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Joel Tamburo</fullName>
                </value>
                <value>
                    <fullName>Jonathan Weinberger</fullName>
                </value>
                <value>
                    <fullName>Karen Sharabi</fullName>
                </value>
                <value>
                    <fullName>Kenon Richardson</fullName>
                </value>
                <value>
                    <fullName>Lindsay Nicolio</fullName>
                </value>
                <value>
                    <fullName>Lizette Marzett</fullName>
                </value>
                <value>
                    <fullName>Program Management</fullName>
                </value>
                <value>
                    <fullName>Twana Hardy</fullName>
                </value>
                <value>
                    <fullName>Vince Walton</fullName>
                    <label>Vince Walton (Inactive)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Referred_Too__c</fullName>
        <label>Referred To</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bill Renkel</fullName>
                </value>
                <value>
                    <fullName>Bus Ops</fullName>
                </value>
                <value>
                    <fullName>Carrie Hossann</fullName>
                    <label>Carrie Hossann (Inactive)</label>
                </value>
                <value>
                    <fullName>Cathy Godfrey</fullName>
                </value>
                <value>
                    <fullName>Chanmin Hoo</fullName>
                </value>
                <value>
                    <fullName>Christopher Cosgrove</fullName>
                </value>
                <value>
                    <fullName>Data Analytics</fullName>
                </value>
                <value>
                    <fullName>Elissa Ilario</fullName>
                </value>
                <value>
                    <fullName>Hoa Nguyen</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Joel Tamburo</fullName>
                </value>
                <value>
                    <fullName>Jonathan Weinberger</fullName>
                </value>
                <value>
                    <fullName>Karen Sharabi</fullName>
                </value>
                <value>
                    <fullName>Kenon Richardson</fullName>
                </value>
                <value>
                    <fullName>Lindsay Nicolio</fullName>
                </value>
                <value>
                    <fullName>Lizette Marzett</fullName>
                </value>
                <value>
                    <fullName>Program Management</fullName>
                </value>
                <value>
                    <fullName>Twana Hardy</fullName>
                </value>
                <value>
                    <fullName>Vince Walton</fullName>
                    <label>Vince Walton (Inactive)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_Support_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Allows user to related an SR to another SR</description>
        <label>Related End User Support Request</label>
        <referenceTo>Support_Request__c</referenceTo>
        <relationshipLabel>End User Support Requests</relationshipLabel>
        <relationshipName>Support_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_to_COM2_Migration__c</fullName>
        <inlineHelpText>Is this related to Large Group COM2 migration?  If it’s related then please select Yes and specify the Release Month.  Otherwise, please mark No.</inlineHelpText>
        <label>Related to COM2 Migration?</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Release_Month__c</fullName>
        <label>Release Month</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>May 2019</fullName>
                </value>
                <value>
                    <fullName>June 2019</fullName>
                </value>
                <value>
                    <fullName>August 2019</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Origin__c</fullName>
        <label>Request Origin</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Salesforce.com</fullName>
                    <default>true</default>
                    <label>Salesforce.com</label>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Reason__c</fullName>
        <label>Request Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Configuration Change Request</fullName>
                </value>
                <value>
                    <fullName>Data Change Request</fullName>
                </value>
                <value>
                    <fullName>Training Request</fullName>
                </value>
                <value>
                    <fullName>Communication Request</fullName>
                </value>
                <value>
                    <fullName>On The Spot User Guidance Resolution</fullName>
                </value>
                <value>
                    <fullName>Reporting</fullName>
                </value>
                <value>
                    <fullName>Defect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <label>Severity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Nice to have</fullName>
                </value>
                <value>
                    <fullName>2 - Efficiency improvement</fullName>
                </value>
                <value>
                    <fullName>3 - Stopping me from doing my job</fullName>
                </value>
                <value>
                    <fullName>4 - Team Process Disruption</fullName>
                </value>
                <value>
                    <fullName>5 - Reqd for Financial Rptng/Sr Leadership Request</fullName>
                </value>
                <value>
                    <fullName>0 - New User Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>In Development</fullName>
                </value>
                <value>
                    <fullName>Awaiting User Response</fullName>
                </value>
                <value>
                    <fullName>Jira Entered</fullName>
                </value>
                <value>
                    <fullName>EUSR Referred</fullName>
                </value>
                <value>
                    <fullName>Closed - Referred</fullName>
                </value>
                <value>
                    <fullName>Jira Closed</fullName>
                </value>
                <value>
                    <fullName>EUSR Completed</fullName>
                </value>
                <value>
                    <fullName>Closed - Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <description>A brief summary of the issue</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>A brief summary of the issue</inlineHelpText>
        <label>Subject</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Audience_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Training Audience Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Training_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Training Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Training_Material_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Training Material Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WellPoint_Entity__c</fullName>
        <inlineHelpText>Please select which WellPoint Company this request is for.  This ensures the proper Business Analyst is notified.</inlineHelpText>
        <label>Anthem Entity</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>GRS</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>IT&amp; Account Management</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Labor Accounts</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>National Accounts</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>New Hampshire</fullName>
                </value>
                <value>
                    <fullName>New York</fullName>
                </value>
                <value>
                    <fullName>Ohio</fullName>
                </value>
                <value>
                    <fullName>Pharmacy</fullName>
                </value>
                <value>
                    <fullName>Specialty</fullName>
                </value>
                <value>
                    <fullName>Virginia</fullName>
                </value>
                <value>
                    <fullName>Wisconsin</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>End User Support Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Referred_To_Lookup__c</columns>
        <columns>Status__c</columns>
        <columns>Description__c</columns>
        <columns>Request_Reason__c</columns>
        <columns>Related_to_COM2_Migration__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_My_EUSR_s</fullName>
        <columns>CREATED_DATE</columns>
        <columns>Closed_Date__c</columns>
        <columns>Created_On_Behalf_Of__c</columns>
        <columns>Request_Reason__c</columns>
        <columns>Status__c</columns>
        <columns>NAME</columns>
        <columns>Referred_To_Lookup__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Subject__c</columns>
        <columns>Severity__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In Development,Awaiting User Response,Jira Entered,EUSR Referred,Closed - Referred,Jira Closed,EUSR Completed,Closed - Completed</value>
        </filters>
        <label>All My EUSR&apos;s</label>
    </listViews>
    <listViews>
        <fullName>All_My_Open_EUSR_s</fullName>
        <columns>CREATED_DATE</columns>
        <columns>Closed_Date__c</columns>
        <columns>Created_On_Behalf_Of__c</columns>
        <columns>Request_Reason__c</columns>
        <columns>Status__c</columns>
        <columns>NAME</columns>
        <columns>Referred_To_Lookup__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Subject__c</columns>
        <columns>Severity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Request_Reason__c</field>
            <operation>notEqual</operation>
            <value>User Access Request,Existing User Access Change,User Deactivation Request</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New,In Development,Jira Entered,EUSR Referred</value>
        </filters>
        <label>All My Open EUSR&apos;s</label>
    </listViews>
    <listViews>
        <fullName>All_Steven_s_Open_EUSR_s</fullName>
        <columns>CREATED_DATE</columns>
        <columns>Closed_Date__c</columns>
        <columns>Created_On_Behalf_Of__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Request_Reason__c</columns>
        <columns>Status__c</columns>
        <columns>NAME</columns>
        <columns>Referred_To_Lookup__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Subject__c</columns>
        <columns>Severity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In Development,Awaiting User Response,Jira Entered</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>judy rawlins</value>
        </filters>
        <label>All Judy&apos;s Open EUSR&apos;s</label>
    </listViews>
    <listViews>
        <fullName>Command_Center_All_Closed_Tickets</fullName>
        <columns>CREATED_DATE</columns>
        <columns>Severity__c</columns>
        <columns>Closed_Date__c</columns>
        <columns>Created_On_Behalf_Of__c</columns>
        <columns>Request_Reason__c</columns>
        <columns>Status__c</columns>
        <columns>NAME</columns>
        <columns>Referred_To_Lookup__c</columns>
        <columns>Jira_Ticket__c</columns>
        <columns>JIRA_Ticket_Team_Assigned__c</columns>
        <columns>Subject__c</columns>
        <columns>Assigned_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New,In Development,Awaiting User Response,Jira Entered</value>
        </filters>
        <label>Command Center - All Open Tickets</label>
    </listViews>
    <listViews>
        <fullName>Command_Center_All_Closed_Tickets1</fullName>
        <columns>CREATED_DATE</columns>
        <columns>Closed_Date__c</columns>
        <columns>Created_On_Behalf_Of__c</columns>
        <columns>Status__c</columns>
        <columns>NAME</columns>
        <columns>Assigned_To__c</columns>
        <columns>Subject__c</columns>
        <columns>Severity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Related_to_COM2_Migration__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Closed - Referred,Closed - Completed</value>
        </filters>
        <label>Command Center - All Closed Tickets</label>
    </listViews>
    <listViews>
        <fullName>Command_Center_All_Tickets</fullName>
        <columns>Severity__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Closed_Date__c</columns>
        <columns>Referred_To_Lookup__c</columns>
        <columns>Created_On_Behalf_Of__c</columns>
        <columns>Status__c</columns>
        <columns>NAME</columns>
        <columns>Assigned_To__c</columns>
        <columns>Subject__c</columns>
        <columns>Request_Reason__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Related_to_COM2_Migration__c</field>
            <operation>equals</operation>
            <value>Yes,No</value>
        </filters>
        <label>Command Center - All Tickets</label>
    </listViews>
    <listViews>
        <fullName>Command_Center_Config_Data_Change</fullName>
        <columns>CREATED_DATE</columns>
        <columns>Closed_Date__c</columns>
        <columns>Created_On_Behalf_Of__c</columns>
        <columns>Request_Reason__c</columns>
        <columns>Status__c</columns>
        <columns>NAME</columns>
        <columns>Referred_To_Lookup__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Subject__c</columns>
        <columns>Severity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Related_to_COM2_Migration__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>Request_Reason__c</field>
            <operation>equals</operation>
            <value>Configuration Change Request,Data Change Request</value>
        </filters>
        <label>Command Center - Config / Data Change</label>
    </listViews>
    <listViews>
        <fullName>Command_Center_Defect_Tickets</fullName>
        <columns>CREATED_DATE</columns>
        <columns>Closed_Date__c</columns>
        <columns>Created_On_Behalf_Of__c</columns>
        <columns>Status__c</columns>
        <columns>NAME</columns>
        <columns>Referred_To_Lookup__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Subject__c</columns>
        <columns>Severity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Related_to_COM2_Migration__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>Request_Reason__c</field>
            <operation>equals</operation>
            <value>Defect</value>
        </filters>
        <label>Command Center - Defect Tickets</label>
    </listViews>
    <listViews>
        <fullName>Command_Center_March_2020</fullName>
        <columns>NAME</columns>
        <columns>WellPoint_Entity__c</columns>
        <columns>Severity__c</columns>
        <columns>Request_Reason__c</columns>
        <columns>Status__c</columns>
        <columns>Jira_Ticket__c</columns>
        <columns>JIRA_Ticket_Status__c</columns>
        <columns>Subject__c</columns>
        <columns>Description__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Assigned_Toa__c</columns>
        <columns>Closed_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>3/29/2020 12:00 AM</value>
        </filters>
        <label>Command Center-March 2020</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Command_Center_Non_Access_Tickets</fullName>
        <columns>CREATED_DATE</columns>
        <columns>Closed_Date__c</columns>
        <columns>Created_On_Behalf_Of__c</columns>
        <columns>Request_Reason__c</columns>
        <columns>Status__c</columns>
        <columns>NAME</columns>
        <columns>Referred_To_Lookup__c</columns>
        <columns>Jira_Ticket__c</columns>
        <columns>JIRA_Ticket_Team_Assigned__c</columns>
        <columns>Subject__c</columns>
        <columns>Severity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Related_to_COM2_Migration__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>Request_Reason__c</field>
            <operation>notEqual</operation>
            <value>User Access Request,Existing User Access Change,User Deactivation Request</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New,In Development,Jira Entered,EUSR Referred</value>
        </filters>
        <label>Command Center - Non-Access Tickets</label>
    </listViews>
    <listViews>
        <fullName>Command_Center_Release_Support_1</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Related_to_COM2_Migration__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <label>Command Center Release Support</label>
    </listViews>
    <listViews>
        <fullName>Command_Center_Training_Navigation</fullName>
        <columns>CREATED_DATE</columns>
        <columns>Closed_Date__c</columns>
        <columns>Created_On_Behalf_Of__c</columns>
        <columns>Request_Reason__c</columns>
        <columns>Status__c</columns>
        <columns>NAME</columns>
        <columns>Referred_To_Lookup__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Subject__c</columns>
        <columns>Severity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Related_to_COM2_Migration__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>Request_Reason__c</field>
            <operation>equals</operation>
            <value>Training Request</value>
        </filters>
        <label>Command Center - Training / Navigation</label>
    </listViews>
    <listViews>
        <fullName>Judy</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Assigned_To__c</columns>
        <columns>Request_Reason__c</columns>
        <columns>Status__c</columns>
        <columns>Created_On_Behalf_Of__c</columns>
        <columns>Referred_To_Lookup__c</columns>
        <columns>Subject__c</columns>
        <columns>Severity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>Judy Rawlins</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In Development,Awaiting User Response,Jira Entered</value>
        </filters>
        <label>Judy - All Open Tickets</label>
    </listViews>
    <listViews>
        <fullName>Judy_All_Closed_Tickets</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Created_On_Behalf_Of__c</columns>
        <columns>Request_Reason__c</columns>
        <columns>Subject__c</columns>
        <columns>Referred_To_Lookup__c</columns>
        <columns>Status__c</columns>
        <columns>Closed_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>Judy Rawlins</value>
        </filters>
        <label>Judy - All  Tickets</label>
    </listViews>
    <nameField>
        <displayFormat>EUSR2-{00000}</displayFormat>
        <label>End User Support Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>End User Support Requests</pluralLabel>
    <recordTypes>
        <fullName>Communication_Request</fullName>
        <active>false</active>
        <label>Communication Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Configuration_Change_Request</fullName>
        <active>false</active>
        <label>Configuration Change Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Data_Change_Request</fullName>
        <active>false</active>
        <label>Data Change Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Defect</fullName>
        <active>false</active>
        <label>Defect</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUSR_User_Create</fullName>
        <active>true</active>
        <description>EUSR Created by User</description>
        <label>EUSR User Create</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUSR_User_Create1</fullName>
        <active>false</active>
        <description>EUSR Created by User</description>
        <label>EUSR User Create-old</label>
    </recordTypes>
    <recordTypes>
        <fullName>Existing_User_Access_Change</fullName>
        <active>false</active>
        <label>Existing User Access Change</label>
    </recordTypes>
    <recordTypes>
        <fullName>On_The_Spot_User_Guidance_Resolution</fullName>
        <active>false</active>
        <label>On The Spot User Guidance Resolution</label>
    </recordTypes>
    <recordTypes>
        <fullName>Reporting</fullName>
        <active>false</active>
        <label>Reporting</label>
    </recordTypes>
    <recordTypes>
        <fullName>Training_Request</fullName>
        <active>false</active>
        <label>Training Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>User_Access_Request</fullName>
        <active>false</active>
        <label>User Access Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>User_Deactivation_Request</fullName>
        <active>false</active>
        <label>User Deactivation Request</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Closed_Date_Required</fullName>
        <active>true</active>
        <description>When the status is set to Closed, the Closed Date is required.</description>
        <errorConditionFormula>AND(ISNULL(Closed_Date__c ), CONTAINS(TEXT(Status__c), &quot;Closed&quot;) )</errorConditionFormula>
        <errorDisplayField>Closed_Date__c</errorDisplayField>
        <errorMessage>Closed Date is required</errorMessage>
    </validationRules>
</CustomObject>